--- a/data_proc_calgary.ipynb
+++ b/data_proc_calgary.ipynb
@@ -43,10 +43,10 @@
    "source": [
     "# REFERENCE: https://spark.apache.org/docs/latest/configuration.html\n",
     "\n",
-    "conf = SparkConf().setAll([('spark.memory.fraction','0.8'),\n",
+    "conf = SparkConf().setAll([('spark.memory.fraction','0.6'),\n",
     "                           ('spark.executor.memory', '16g'),\n",
     "                           ('spark.driver.memory','16g'),\n",
-    "                           ('spark.sql.shuffle.partitions','10'),\n",
+    "                           ('spark.sql.shuffle.partitions','20'),\n",
     "                           ('spark.memory.offHeap.enabled', True),\n",
     "                           ('spark.memory.offHeap.size','16g'),\n",
     "                           ('spark.cleaner.referenceTracking.cleanCheckpoints', True)]#,\n",
@@ -112,8 +112,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "palms_out = spark.read.csv(palms_path, header=True, inferSchema=True)\n",
+    "palms_out = spark.read.csv(palms_path, header=True, inferSchema=True, )\n",
     "palms_out.cache();"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "palms_out.rdd.getNumPartitions()"
    ]
   },
   {
