--- a/data_proc_calgary.ipynb
+++ b/data_proc_calgary.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,9 +37,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('spark.sql.shuffle.partitions', '20'),\n",
+       " ('spark.cleaner.referenceTracking.cleanCheckpoints', 'True'),\n",
+       " ('spark.driver.port', '63089'),\n",
+       " ('spark.executor.id', 'driver'),\n",
+       " ('spark.driver.memory', '16g'),\n",
+       " ('spark.driver.host', '10.0.1.4'),\n",
+       " ('spark.app.name', 'GPS+ACC'),\n",
+       " ('spark.executor.memory', '16g'),\n",
+       " ('spark.app.id', 'local-1557071356005'),\n",
+       " ('spark.rdd.compress', 'True'),\n",
+       " ('spark.memory.fraction', '0.6'),\n",
+       " ('spark.serializer.objectStreamReset', '100'),\n",
+       " ('spark.master', 'local[*]'),\n",
+       " ('spark.submit.deployMode', 'client'),\n",
+       " ('spark.memory.offHeap.enabled', 'True'),\n",
+       " ('spark.ui.showConsoleProgress', 'true'),\n",
+       " ('spark.memory.offHeap.size', '16g')]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# REFERENCE: https://spark.apache.org/docs/latest/configuration.html\n",
     "\n",
@@ -65,27 +92,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "sc.defaultParallelism"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "sc.defaultMinPartitions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <div>\n",
+       "            <p><b>SparkContext</b></p>\n",
+       "\n",
+       "            <p><a href=\"http://10.0.1.4:4040\">Spark UI</a></p>\n",
+       "\n",
+       "            <dl>\n",
+       "              <dt>Version</dt>\n",
+       "                <dd><code>v2.4.0</code></dd>\n",
+       "              <dt>Master</dt>\n",
+       "                <dd><code>local[*]</code></dd>\n",
+       "              <dt>AppName</dt>\n",
+       "                <dd><code>GPS+ACC</code></dd>\n",
+       "            </dl>\n",
+       "        </div>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<SparkContext master=local[*] appName=GPS+ACC>"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "sc"
    ]
@@ -470,7 +548,18 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DataFrame[timestamp: timestamp, dow: string, lat: double, lon: double, distance: double, height: double, speed: double]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "date_format = 'yyyy/MM/dd'\n",
     "time_format = 'HH:mm:ss'\n",
@@ -622,7 +711,16 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "====> align timestamps...\n",
+      "      time elapsed: 00:00:09\n"
+     ]
+    }
+   ],
    "source": [
     "# Round seconds in timestamps according to the interval\n",
     "\n",
@@ -648,7 +746,7 @@
      "output_type": "stream",
      "text": [
       "====> set fix type...\n",
-      "      time elapsed: 00:00:02\n"
+      "      time elapsed: 00:00:06\n"
      ]
     }
    ],
@@ -667,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -694,7 +792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -702,7 +800,7 @@
      "output_type": "stream",
      "text": [
       "====> apply accelaration filter...\n",
-      "      time elapsed: 00:00:00\n"
+      "      time elapsed: 00:00:01\n"
      ]
     }
    ],
@@ -722,7 +820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -730,7 +828,7 @@
      "output_type": "stream",
      "text": [
       "====> apply height variation filter...\n",
-      "      time elapsed: 00:00:01\n"
+      "      time elapsed: 00:00:02\n"
      ]
     }
    ],
@@ -750,25 +848,14 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "115122"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "gps_data.count()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -797,7 +884,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -806,7 +893,7 @@
        "115045"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -844,24 +931,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "root\n",
-      " |-- timestamp: timestamp (nullable = true)\n",
-      " |-- dow: string (nullable = true)\n",
-      " |-- lat: double (nullable = true)\n",
-      " |-- lon: double (nullable = true)\n",
-      " |-- distance: string (nullable = true)\n",
-      " |-- height: double (nullable = true)\n",
-      " |-- speed: double (nullable = true)\n",
-      " |-- fixTypeCode: integer (nullable = false)\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "gps_data.printSchema()"
    ]
@@ -884,11 +954,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "gps_data = gps_data.limit(10000)"
+    "gps_data = gps_data.limit(50000)"
    ]
   },
   {
@@ -902,9 +972,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "root\n",
+      " |-- timestamp: timestamp (nullable = true)\n",
+      " |-- dow: string (nullable = true)\n",
+      " |-- lat: double (nullable = true)\n",
+      " |-- lon: double (nullable = true)\n",
+      " |-- distance: string (nullable = true)\n",
+      " |-- height: double (nullable = true)\n",
+      " |-- speed: double (nullable = true)\n",
+      " |-- fixTypeCode: integer (nullable = false)\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "gps_data.printSchema()"
    ]
@@ -946,7 +1033,7 @@
     "print(\"====> detect trips...\")\n",
     "start_time = time.time()\n",
     "gps_data2 = detect_trips(gps_data, ts_name, dist_name, speed_name, fix_type_name, min_dist_per_min, \n",
-    "                 min_pause_duration, max_pause_time, vmax, 8).cache()\n",
+    "                 min_pause_duration, max_pause_time, vmax).cache()\n",
     "gps_data2.count()\n",
     "elapsed_time = time.time() - start_time\n",
     "print(\"      time elapsed: {}\".format(time.strftime(\"%H:%M:%S\", time.gmtime(elapsed_time))))\n",
@@ -1073,16 +1160,23 @@
     "                                          3.6*F.col(dist_name)/F.col('duration')\n",
     "                                         ).otherwise(0.0)\n",
     "                        ).orderBy(ts_name)\n",
-    "    df2.select(ts_name, 'speed', 'speed2').show()\n",
+    "    df2.select(ts_name,'speed','speed2').show(10000,False)\n",
     "  \n",
     "    df2 = df2.withColumn('roundSpeed', F.when(F.col('trip').isNotNull(), \n",
-    "                                              udf_round(F.col(speed_name)).cast(IntegerType())))\n",
-    "                                              #udf_round(F.col('speed2')).cast(IntegerType())))\n",
-    "    \n",
+    "                                              #udf_round(F.col(speed_name)).cast(IntegerType())))\n",
+    "                                              udf_round(F.col('speed2')).cast(IntegerType())))\n",
+    "    \"\"\"\n",
     "    df2 = df2.withColumn('trip', F.when((F.col('trip') == 2) &\n",
     "                                         (F.lag('roundSpeed',1).over(Window.orderBy(ts_name)) == 0),\n",
     "                                         4).otherwise(F.col('trip'))\n",
     "                        ).orderBy(ts_name)\n",
+    "    \"\"\"\n",
+    "    #######\n",
+    "    df2 = df2.withColumn('trip', F.when((F.col('trip') == 2) &\n",
+    "                                         (F.col('roundSpeed') == 0),\n",
+    "                                         4).otherwise(F.col('trip'))\n",
+    "                        ).orderBy(ts_name)\n",
+    "    #######\n",
     "    \n",
     "    df2 = df2.withColumn('trip', F.when((F.col('trip') == 4) &\n",
     "                                        (F.lag('trip',1).over(Window.orderBy(ts_name)) == 4),\n",
@@ -1141,10 +1235,10 @@
     "    \n",
     "    \n",
     "    # set trip mode\n",
-    "    #n_percentile = F.expr('percentile_approx(roundSpeed, {})'.format(str(speed_percentile)))\n",
+    "    #n_percentile = F.expr('percentile_approx(roundSpeed, {})'.format(str(speed_percentile*0.01)))\n",
     "    n_percentile = F.expr('percentile(roundSpeed, {})'.format(str(speed_percentile*0.01)))\n",
     "    \n",
-    "    \n",
+    "      \n",
     "    df2b = df2.select(ts_name,'tripType','trip','segment','roundSpeed')\n",
     "    df2b = df2b.withColumn('tmp', F.when((F.col('roundSpeed') == 0) &\n",
     "                                         (F.col('trip') != 4) &\n",
@@ -1152,9 +1246,6 @@
     "                                         0)\n",
     "                          )\n",
     "    df2b = df2b.filter(F.col('tmp').isNull()).drop('tmp').orderBy(ts_name)\n",
-    "    #print(df2b.count())\n",
-    "    \n",
-    "    #df2b.show(10000,False)\n",
     "    \n",
     "    df2b = df2b.withColumn('tmp', n_percentile.over(Window.partitionBy('segment'))).orderBy(ts_name)\n",
     "    \n",
@@ -1168,14 +1259,7 @@
     "                                             )\n",
     "                                      ).otherwise(F.col('tmp'))\n",
     "                         ).orderBy(ts_name)\n",
-    "    #print(df2.count())\n",
-    "    \n",
-    "    #df2.drop(*['lat','lon','dow','distance','speed2','fixTypeCode','cum_pause','duration']).show(10000,False)\n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "    df2 = df2.withColumn('tmp', n_percentile.over(Window.partitionBy('segment'))).orderBy(ts_name)                     \n",
-    "    \n",
+    "   \n",
     "    df2 = df2.withColumn('tripMOT', F.when(F.col('tmp').isNotNull(),\n",
     "                                           app_fun(F.col('tmp'))\n",
     "                                          ).otherwise(F.col('tripMOT'))\n",
