--- a/data_proc_calgary.ipynb
+++ b/data_proc_calgary.ipynb
@@ -998,14 +998,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "====> detect trips...\n"
+      "====> detect trips...\n",
+      "      time elapsed: 02:05:24\n"
      ]
     }
    ],
@@ -1064,9 +1065,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "root\n",
+      " |-- timestamp: timestamp (nullable = true)\n",
+      " |-- lat: double (nullable = true)\n",
+      " |-- lon: double (nullable = true)\n",
+      " |-- fixTypeCode: integer (nullable = false)\n",
+      " |-- dow: string (nullable = true)\n",
+      " |-- distance: string (nullable = true)\n",
+      " |-- speed: double (nullable = true)\n",
+      " |-- duration: integer (nullable = true)\n",
+      " |-- tripType: integer (nullable = true)\n",
+      " |-- cum_pause: long (nullable = true)\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "gps_data2.printSchema()"
    ]
@@ -1117,7 +1137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1160,7 +1180,7 @@
     "                                          3.6*F.col(dist_name)/F.col('duration')\n",
     "                                         ).otherwise(0.0)\n",
     "                        ).orderBy(ts_name)\n",
-    "    df2.select(ts_name,'speed','speed2').show(10000,False)\n",
+    "    #df2.select(ts_name,'speed','speed2').show(10000,False)\n",
     "  \n",
     "    df2 = df2.withColumn('roundSpeed', F.when(F.col('trip').isNotNull(), \n",
     "                                              #udf_round(F.col(speed_name)).cast(IntegerType())))\n",
@@ -1207,7 +1227,7 @@
     "                        ).orderBy(ts_name)\n",
     "    \n",
     "    df2 = trip_segmentation(df2, ts_name, speed_segment_length).checkpoint()\n",
-    "    \n",
+    "    \"\"\"\n",
     "    stop = (F.col('trip') == 1)\n",
     "    \n",
     "    ct = df2.filter(stop).count()\n",
@@ -1440,6 +1460,168 @@
     "                         ).orderBy(ts_name)\n",
     "\n",
     "    df2 = df2.select(ts_name,'dow','lat','lon','fixTypeCode','tripNumber','tripType','tripMOT')\n",
+    "    \"\"\"\n",
+    "    return df2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def trip_segmentation(df, ts_name, speed_segment_length):\n",
+    "    \n",
+    "    \"\"\"\n",
+    "    \n",
+    "    \"\"\"\n",
+    "    \n",
+    "    w1 = Window.orderBy(ts_name).rowsBetween(Window.unboundedPreceding, 0)\n",
+    "    w2 = Window.partitionBy('segment').orderBy(ts_name)\n",
+    "    \n",
+    "    app_fun = F.udf(lambda a,b,c,d: calc_distance(a,b,c,d))\n",
+    "    \n",
+    "    # trip segmentation\n",
+    "    \n",
+    "    df2 = df.withColumn('segment', F.when(F.col('trip') == 1, F.monotonically_increasing_id()))\n",
+    "    df2 = df2.withColumn('segment', F.when(F.col('segment').isNull() &\n",
+    "                                           F.col('trip').isNotNull(),\n",
+    "                                           F.last('segment', ignorenulls=True).over(w1)\n",
+    "                                           ).otherwise(F.col('segment'))\n",
+    "                        ).orderBy(ts_name)\n",
+    "    \n",
+    "    # compute duration and traveled distance for each segment\n",
+    "    \n",
+    "    df2 = df2.withColumn('pause', F.when(F.col('trip') == 1,\n",
+    "                                         F.col('duration')\n",
+    "                                        )\n",
+    "                        )\n",
+    "    \n",
+    "    df2 = df2.withColumn('pause_dist', F.when(F.col('trip') == 1,\n",
+    "                                              0.0\n",
+    "                                             )\n",
+    "                        )\n",
+    "    \n",
+    "    df2 = df2.withColumn('pause', F.when(F.col('pause') == F.col('duration'),\n",
+    "                                         F.col('cum_pause') - F.col('duration')\n",
+    "                                        ).otherwise(F.col('pause'))\n",
+    "                        ).orderBy(ts_name)\n",
+    "        \n",
+    "    df2 = df2.withColumn('pause', F.when(F.col('segment').isNotNull() &\n",
+    "                                         F.col('pause').isNull(), \n",
+    "                                         F.last('pause', ignorenulls=True).over(w1)\n",
+    "                                        ).otherwise(F.col('pause'))\n",
+    "                        ).orderBy(ts_name)\n",
+    "        \n",
+    "    df2 = df2.withColumn('pause', F.when(F.col('segment').isNotNull(),\n",
+    "                                         F.col('cum_pause') - F.col('pause')\n",
+    "                                        ).otherwise(F.col('pause'))\n",
+    "                        )\n",
+    "    \n",
+    "         \n",
+    "    df2 = df2.withColumn('lat2', F.when(F.col('pause_dist').isNotNull(), F.col('lat')))\n",
+    "    df2 = df2.withColumn('lat2', F.when(F.col('pause_dist').isNull(),\n",
+    "                                        F.last('lat2', ignorenulls=True).over(w2)\n",
+    "                                       )\n",
+    "                                  .otherwise(F.col('lat'))\n",
+    "                        ).orderBy(ts_name)\n",
+    "    df2 = df2.withColumn('lat2', F.when(F.col('lat2').isNull(), F.col('lat')).otherwise(F.col('lat2')))\n",
+    "                        \n",
+    "    df2 = df2.withColumn('lon2', F.when(F.col('pause_dist').isNotNull(), F.col('lon')))\n",
+    "    df2 = df2.withColumn('lon2', F.when(F.col('pause_dist').isNull(), \n",
+    "                                        F.last('lon2', ignorenulls=True).over(w2)\n",
+    "                                       ).otherwise(F.col('lon'))\n",
+    "                            ).orderBy(ts_name)\n",
+    "    df2 = df2.withColumn('lon2', F.when(F.col('lon2').isNull(), F.col('lon')).otherwise(F.col('lon2')))\n",
+    "        \n",
+    "    df2 = df2.withColumn('pause_dist', F.when(F.col('segment').isNotNull() &\n",
+    "                                              F.col('pause_dist').isNull(),\n",
+    "                                              app_fun(F.col('lat'),F.col('lon'),F.col('lat2'),F.col('lon2'))\n",
+    "                                             ).otherwise(F.col('pause_dist'))\n",
+    "                        )\n",
+    "    df2 = df2.drop(*['lat2','lon2'])\n",
+    "    \n",
+    "    # remove short sub-trips \n",
+    "    \n",
+    "    \n",
+    "    df2 = df2.withColumn('t1', F.when((F.col('trip') == 4) &\n",
+    "                                        (F.col('pause_dist') <= speed_segment_length) &\n",
+    "                                        F.lead('trip',1).over(Window.orderBy(ts_name)).isNotNull(),\n",
+    "                                        F.col('segment') #F.monotonically_increasing_id()\n",
+    "                                       )\n",
+    "                        )\n",
+    "    \n",
+    "    df2 = df2.withColumn('t1', F.when(F.col('segment').isNotNull() &\n",
+    "                                      F.col('t1').isNull(),\n",
+    "                                      F.first('t1', ignorenulls=True)\n",
+    "                                       .over(Window.partitionBy('segment')\n",
+    "                                                   .rowsBetween(0, Window.unboundedFollowing)\n",
+    "                                            )\n",
+    "                                      ).otherwise(F.col('t1'))\n",
+    "                         ).orderBy(ts_name)\n",
+    "    \n",
+    "    df2 = df2.withColumn('t1', F.when(F.col('t1').isNotNull() &\n",
+    "                                      (F.col('trip') == 4) &\n",
+    "                                      F.lead('t1',1).over(Window.orderBy(ts_name)).isNotNull(),\n",
+    "                                      F.lead('t1',1).over(Window.orderBy(ts_name))\n",
+    "                                     ).otherwise(F.col('t1'))\n",
+    "                        ).orderBy(ts_name)\n",
+    "    \n",
+    "    df2 = df2.withColumn('t2', F.when((F.col('trip') == 4) &\n",
+    "                                        (F.col('pause_dist') <= speed_segment_length) &\n",
+    "                                        F.lead('trip',1).over(Window.orderBy(ts_name)).isNotNull(),\n",
+    "                                        F.col('pause_dist')\n",
+    "                                       ).otherwise(0.0)\n",
+    "                        )\n",
+    "    df2 = df2.withColumn('t3', F.when(F.col('t1').isNotNull(),\n",
+    "                                      F.sum('t2').over(Window.partitionBy('t1').orderBy(ts_name)\n",
+    "                                                             .rowsBetween(Window.unboundedPreceding,0)\n",
+    "                                                      )\n",
+    "                                     )\n",
+    "                        ).orderBy(ts_name)\n",
+    "    df2 = df2.withColumn('t2', F.when((F.col('trip') == 4) &\n",
+    "                                      (F.col('t2') == F.col('t3')),\n",
+    "                                     F.col('t2') + F.lag('t3',1).over(Window.orderBy(ts_name))\n",
+    "                                     ).otherwise(F.col('t2'))\n",
+    "                        ).orderBy(ts_name)\n",
+    "    df2 = df2.withColumn('t3', F.when(F.col('t1').isNotNull(),\n",
+    "                                      F.sum('t2').over(Window.partitionBy('t1').orderBy(ts_name)\n",
+    "                                                             .rowsBetween(Window.unboundedPreceding,0)\n",
+    "                                                      )\n",
+    "                                     )\n",
+    "                        )#.drop(*['t1','t2']).orderBy(ts_name)\n",
+    "    \n",
+    "    \n",
+    "    #df2.select(ts_name,'trip','segment','pause_dist','t1','t2','t3').show(10000,False)\n",
+    "    \n",
+    "    df2 = df2.withColumn('trip', F.when((F.col('trip') == 4) &\n",
+    "                                        (F.col('t3') <= speed_segment_length) &\n",
+    "                                        F.lead('trip',1).over(Window.orderBy(ts_name)).isNotNull(),\n",
+    "                                        F.col('tripType')\n",
+    "                                       ).otherwise(F.col('trip'))\n",
+    "                        ).orderBy(ts_name)\n",
+    "    \n",
+    "    df2 = df2.withColumn('trip', F.when((F.col('trip') == 1) &\n",
+    "                                        (F.lag('t3',1).over(Window.orderBy(ts_name)) <= speed_segment_length),\n",
+    "                                        F.col('tripType')\n",
+    "                                       ).otherwise(F.col('trip'))\n",
+    "                        )#.drop('t3').orderBy(ts_name)\n",
+    "    \n",
+    "    df2.select(ts_name,'trip','segment','pause_dist','t1','t2','t3').show(10000,False)\n",
+    "    \"\"\"\n",
+    "    df2 = df2.withColumn('trip', F.when((F.col('trip') == 4) &\n",
+    "                                        (F.col('pause_dist') <= speed_segment_length) &\n",
+    "                                        F.lead('trip',1).over(Window.orderBy(ts_name)).isNotNull(),\n",
+    "                                        F.col('tripType')\n",
+    "                                       ).otherwise(F.col('trip'))\n",
+    "                        )\n",
+    "    \n",
+    "    df2 = df2.withColumn('trip', F.when((F.col('trip') == 1) &\n",
+    "                                        (F.lag('pause_dist',1).over(Window.orderBy(ts_name)) <= speed_segment_length),\n",
+    "                                        F.col('tripType')\n",
+    "                                       ).otherwise(F.col('trip'))\n",
+    "                        )\n",
+    "    \"\"\"\n",
     "    \n",
     "    return df2"
    ]
@@ -1448,7 +1630,15 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "====> classify trips...\n"
+     ]
+    }
+   ],
    "source": [
     "#%%time\n",
     "\n",
@@ -1476,9 +1666,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 24,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "IOPub data rate exceeded.\n",
+      "The notebook server will temporarily stop sending output\n",
+      "to the client in order to avoid crashing it.\n",
+      "To change this limit, set the config variable\n",
+      "`--NotebookApp.iopub_data_rate_limit`.\n",
+      "\n",
+      "Current values:\n",
+      "NotebookApp.iopub_data_rate_limit=1000000.0 (bytes/sec)\n",
+      "NotebookApp.rate_limit_window=3.0 (secs)\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "gps_data3.show(10000,False)"
    ]
