--- a/data_proc_calgary.ipynb
+++ b/data_proc_calgary.ipynb
@@ -44,14 +44,14 @@
      "data": {
       "text/plain": [
        "[('spark.sql.shuffle.partitions', '20'),\n",
+       " ('spark.app.id', 'local-1557089405936'),\n",
        " ('spark.cleaner.referenceTracking.cleanCheckpoints', 'True'),\n",
-       " ('spark.driver.port', '63089'),\n",
        " ('spark.executor.id', 'driver'),\n",
        " ('spark.driver.memory', '16g'),\n",
        " ('spark.driver.host', '10.0.1.4'),\n",
        " ('spark.app.name', 'GPS+ACC'),\n",
+       " ('spark.driver.port', '49509'),\n",
        " ('spark.executor.memory', '16g'),\n",
-       " ('spark.app.id', 'local-1557071356005'),\n",
        " ('spark.rdd.compress', 'True'),\n",
        " ('spark.memory.fraction', '0.6'),\n",
        " ('spark.serializer.objectStreamReset', '100'),\n",
@@ -717,7 +717,7 @@
      "output_type": "stream",
      "text": [
       "====> align timestamps...\n",
-      "      time elapsed: 00:00:09\n"
+      "      time elapsed: 00:00:04\n"
      ]
     }
    ],
@@ -746,7 +746,7 @@
      "output_type": "stream",
      "text": [
       "====> set fix type...\n",
-      "      time elapsed: 00:00:06\n"
+      "      time elapsed: 00:00:02\n"
      ]
     }
    ],
@@ -800,7 +800,7 @@
      "output_type": "stream",
      "text": [
       "====> apply accelaration filter...\n",
-      "      time elapsed: 00:00:01\n"
+      "      time elapsed: 00:00:00\n"
      ]
     }
    ],
@@ -828,7 +828,7 @@
      "output_type": "stream",
      "text": [
       "====> apply height variation filter...\n",
-      "      time elapsed: 00:00:02\n"
+      "      time elapsed: 00:00:01\n"
      ]
     }
    ],
@@ -846,16 +846,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "115122"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "gps_data.count()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -884,7 +895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -893,7 +904,7 @@
        "115045"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -954,11 +965,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "gps_data = gps_data.limit(50000)"
+    "gps_data = gps_data.limit(10000)"
    ]
   },
   {
@@ -972,7 +983,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -998,15 +1009,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "====> detect trips...\n",
-      "      time elapsed: 02:05:24\n"
+      "====> detect trips...\n"
      ]
     }
    ],
@@ -1065,28 +1075,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "root\n",
-      " |-- timestamp: timestamp (nullable = true)\n",
-      " |-- lat: double (nullable = true)\n",
-      " |-- lon: double (nullable = true)\n",
-      " |-- fixTypeCode: integer (nullable = false)\n",
-      " |-- dow: string (nullable = true)\n",
-      " |-- distance: string (nullable = true)\n",
-      " |-- speed: double (nullable = true)\n",
-      " |-- duration: integer (nullable = true)\n",
-      " |-- tripType: integer (nullable = true)\n",
-      " |-- cum_pause: long (nullable = true)\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "gps_data2.printSchema()"
    ]
@@ -1175,7 +1166,6 @@
     "    \n",
     "    \n",
     "    # set trip start according to speed\n",
-    "    \n",
     "    df2 = df2.withColumn('speed2', F.when((F.col(dist_name) != 0.0),\n",
     "                                          3.6*F.col(dist_name)/F.col('duration')\n",
     "                                         ).otherwise(0.0)\n",
@@ -1227,7 +1217,7 @@
     "                        ).orderBy(ts_name)\n",
     "    \n",
     "    df2 = trip_segmentation(df2, ts_name, speed_segment_length).checkpoint()\n",
-    "    \"\"\"\n",
+    "    \n",
     "    stop = (F.col('trip') == 1)\n",
     "    \n",
     "    ct = df2.filter(stop).count()\n",
@@ -1460,7 +1450,7 @@
     "                         ).orderBy(ts_name)\n",
     "\n",
     "    df2 = df2.select(ts_name,'dow','lat','lon','fixTypeCode','tripNumber','tripType','tripMOT')\n",
-    "    \"\"\"\n",
+    "    \"\"\"\"\"\"\n",
     "    return df2"
    ]
   },
@@ -1589,7 +1579,7 @@
     "                                                             .rowsBetween(Window.unboundedPreceding,0)\n",
     "                                                      )\n",
     "                                     )\n",
-    "                        )#.drop(*['t1','t2']).orderBy(ts_name)\n",
+    "                        ).drop(*['t1','t2']).orderBy(ts_name)\n",
     "    \n",
     "    \n",
     "    #df2.select(ts_name,'trip','segment','pause_dist','t1','t2','t3').show(10000,False)\n",
@@ -1605,9 +1595,9 @@
     "                                        (F.lag('t3',1).over(Window.orderBy(ts_name)) <= speed_segment_length),\n",
     "                                        F.col('tripType')\n",
     "                                       ).otherwise(F.col('trip'))\n",
-    "                        )#.drop('t3').orderBy(ts_name)\n",
+    "                        ).drop('t3').orderBy(ts_name)\n",
     "    \n",
-    "    df2.select(ts_name,'trip','segment','pause_dist','t1','t2','t3').show(10000,False)\n",
+    "    #df2.select(ts_name,'trip','segment','pause_dist','t1','t2','t3').show(10000,False)\n",
     "    \"\"\"\n",
     "    df2 = df2.withColumn('trip', F.when((F.col('trip') == 4) &\n",
     "                                        (F.col('pause_dist') <= speed_segment_length) &\n",
